update with last improvements