@@ -25,6 +25,52 @@ or omitted charset arguments may produce different results on Windows.
 **Fix**: explicitly specify `StandardCharsets.UTF_8` (or the intended charset) in
 all I/O operations. If the code already does this, no change is needed.
 
+### Locale data upgraded to CLDR 42 — date/time formats changed (Java 20)
+
+This is the most frequently missed 17 → 21 blocker. JDK 20 upgraded the CLDR locale
+data to version 42, which **changed the output of standard date/time formatters**:
+
+| Change | Before (JDK 17) | After (JDK 20+) |
+|---|---|---|
+| Space before AM/PM | `1:30 PM` (U+0020 space) | `1:30 PM` (U+202F **narrow no-break space**) |
+| Date/time separator | `Jan 1, 2024 at 1:30 PM` | `Jan 1, 2024, 1:30 PM` (`" at "` no longer used) |
+| First day of week (CN) | Sunday | Monday |
+
+**Impact**: any code that string-compares, parses, or asserts on formatted dates will
+break — and it breaks *silently* in production but *loudly* in test suites, because the
+narrow no-break space is visually identical to a normal space in diff output. Symptoms
+are baffling assertion failures like `expected:<1:30 PM> but was:<1:30 PM>`.
+
+**Search pattern**: `DateTimeFormatter.ofLocalizedDate`, `ofLocalizedTime`,
+`ofLocalizedDateTime`, `FormatStyle.`, `DateFormat.getDateTimeInstance`,
+`SimpleDateFormat` with `a` (am/pm) patterns, and any test asserting on formatted
+date strings.
+
+**Fix** (in order of preference):
+
+1. **Use explicit patterns** instead of localized styles where the exact output matters
+   (e.g., machine-readable output, log lines, file names, API payloads):
+
+   ```diff
+   - DateTimeFormatter fmt = DateTimeFormatter.ofLocalizedDateTime(FormatStyle.SHORT);
+   + DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
+   ```
+
+   Better still, use `DateTimeFormatter.ISO_LOCAL_DATE_TIME` for interchange formats.
+
+2. **Normalize before comparing** in tests that must keep localized output:
+
+   ```java
+   String normalized = formatted.replace('\u202F', ' ').replace('\u00A0', ' ');
+   ```
+
+3. **Do NOT reach for `-Djava.locale.providers=COMPAT`.** It still works in Java 21 but
+   prints a deprecation warning, and it was **removed entirely in JDK 23** — so it is a
+   dead end that will break again on the very next hop.
+
+> Note: CLDR data is refreshed in *every* JDK release, so localized formatting output is
+> never a stable contract. Treat localized formats as display-only.
+
 ### `finalize()` deprecated for removal (Java 18, JEP 421)
 
 The `Object.finalize()` method is deprecated for removal. Classes that override it
@@ -35,15 +81,27 @@ will trigger warnings, and future JDKs will remove the method entirely.
 **Fix**: replace with `try-with-resources` (for `Closeable` resources) or the
 `java.lang.ref.Cleaner` API for custom cleanup.
 
-### Thread control methods throw unconditionally
+### Thread control methods throw unconditionally (Java 20 / 21)
 
-`Thread.stop()`, `Thread.suspend()`, and `Thread.resume()` now throw
-`UnsupportedOperationException` unconditionally. They are no longer just deprecated.
+These long-deprecated methods no longer merely warn — they now throw
+`UnsupportedOperationException` on every call:
 
-**Search pattern**: `.stop()`, `.suspend()`, `.resume()` on Thread instances.
+| Method | Throws unconditionally since |
+|---|---|
+| `Thread.stop()` | Java 20 |
+| `Thread.suspend()` / `Thread.resume()` | Java 21 |
+| `ThreadGroup.stop()` / `suspend()` / `resume()` | Java 20–21 |
+
+**Impact**: this is a *runtime* failure, not a compile error — code that called these in
+a rarely-exercised shutdown or timeout path will compile cleanly and then throw in
+production. Grep for them even if the compiler is silent.
+
+**Search pattern**: `.stop()`, `.suspend()`, `.resume()` on `Thread` or `ThreadGroup`
+instances, `ThreadDeath`.
 
 **Fix**: redesign using cooperative interruption (`Thread.interrupt()` + checking
-`Thread.isInterrupted()`), or use `ExecutorService` with proper shutdown.
+`Thread.isInterrupted()`), or use `ExecutorService` with `shutdownNow()` and
+`awaitTermination(...)`.
 
 ### `java.net.URL` constructors deprecated (Java 20)
 
